# peoplejoin

./: DATA_LICENSE.md  Makefile  README.md  pyproject.toml  pyrightconfig.json
data/: README.md
data/peoplejoin-doc-creation/: stats.py  test.scenario.jsonl  train.scenario.jsonl  val.scenario.jsonl
data/peoplejoin-doc-creation/tenants/: test_0.json  test_1.json  test_10.json  test_11.json  test_12.json  test_13.json  test_14.json  test_15.json  test_16.json  test_17.json  test_18.json  test_19.json  test_2.json  test_20.json  test_21.json  test_22.json  test_23.json  test_24.json  test_25.json  test_26.json  test_27.json  test_28.json  test_29.json  test_3.json  test_30.json  test_31.json  test_32.json  test_33.json  test_34.json  test_35.json  test_36.json  test_37.json  test_38.json  test_39.json  test_4.json  test_40.json  test_41.json  test_42.json  test_43.json  test_44.json  (+158 more)
data/peoplejoin-qa/: dev.jsonl
data/peoplejoin-qa/tenant_data_v2/: allergy_1.json  apartment_rentals.json  architecture.json  assets_maintenance.json  battle_death.json  behavior_monitoring.json  body_builder.json  book_2.json  candidate_poll.json  car_1.json  cinema.json  city_record.json  climbing.json  club_1.json  coffee_shop.json  college_1.json  college_3.json  company_1.json  company_employee.json  company_office.json  concert_singer.json  course_teach.json  cre_Doc_Control_Systems.json  cre_Doc_Template_Mgt.json  cre_Doc_Tracking_DB.json  cre_Docs_and_Epenses.json  cre_Drama_Workshop_Groups.json  cre_Theme_park.json  csu_1.json  culture_company.json  customer_complaints.json  customers_and_addresses.json  customers_and_invoices.json  customers_and_products_contacts.json  customers_campaigns_ecommerce.json  customers_card_transactions.json  debate.json  decoration_competition.json  department_management.json  department_store.json  (+100 more)
src/: logging_config.py
src/async_collab/: api.py  settings.py
src/async_collab/agent/: agent_config.py  base_agent.py
src/async_collab/core/: bot.py  calendar.py  document.py  message.py  person.py
src/async_collab/llm/: llm_client.py  llm_client_service.py
src/async_collab/orchestrator/: datum.py  orchestrator.py  prompt_builder.py
src/async_collab/plugins/: all_plugins.py  plugin.py
src/async_collab/scenarios/: all_exemplars.py
src/async_collab/tenant/: tenant.py  tenant_loaders.py
src/data_preparation/: common.py  utils.py
src/evaluation/: eval.py  eval_impls.py  eval_manager.py
src/experimentation/: experiment_with_hitl_or_simulation.py  run_evals.py  sim_hitl_exp_config.py  simulated_user.py
tests/: test_data_loading.py  test_eval.py
tests/test_data/: async_collab_spider.json  concert_singer_spider_tenant.json  concert_singer_spider_tenant_v2.json  multinews_tenant.json  test_saved_another_datum.json  test_saved_datum.json
workspace/peoplejoin-doc-creation/: create_peoplejoindoccreation_configs.py
workspace/peoplejoin-qa/: ReadMe.md  create_peoplejoinqa_configs.py
workspace/sample_run/: sample_spider_exp_config.json  sample_spider_hitl_exp_config.json  sample_two_spider_exp_config.json
(+728 files in other folders)
