[tool.poetry]
name = "async-collab"
# The real version is set by poetry-dynamic-versioning as configured below.
# If any Git revisions are tagged "vX.Y.Z", then the version will be
# "X.Y.Z+1.devN" where N is the number of commits since the tag.
# For example, if there was a v0.1.2 tag and there have been 5 commits since,
# the version will be "0.1.3.dev5".
version = "0.0.1.dev118"
description = ""
authors = ["Harsh Jhamtani <hjhamtani@microsoft.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
# async-friendly version of flask, for the back-end API
quart = "^0.19.4"
# for deploying the API
hypercorn = "^0.15.0"
jsons = "^1.6.3"
pint = "^0.23"
openai = "^1.13.3"
websockets = "^12.0"
msgraph-sdk = "^1.2.0"
pythonnet = "^3.0.3"
python-dotenv = "^1.0.1"
websocket-client = "^1.8.0"
pytz = "^2024.1"
types-pytz = "^2024.1.0.20240417"
rank_bm25 = "^0.2.2"
# following are from sps
find-libpython = "^0.3.0"
pyrsistent = "^0.19.3"
msal = "^1.28.0"
pyyaml = "^6.0.1"
datasets = "^2.14.5"
jsonnet-binary = "0.17.0"
typer = "^0.9.0"
cattrs = "^23.1.2"
streamlit = "^1.27.1"
openpyxl = "^3.1.2"
nest-asyncio = "^1.5.8"
evaluate = "^0.4.1"
cer = "^1.2.0"
streamlit-tree-select = "^0.0.5"
azure-identity = "^1.15.0"
azure-keyvault-secrets = "^4.7.0"
sqlparse = "^0.5.1"
matplotlib = "^3.9.2"
aiohttp = "^3.0"
platformdirs = "^3.0"
tiktoken = "^0.7.0"
lark = "^1.1"
more-itertools = ">=8"
numpy = "^1.21"
regex = "^2023.6.3"
scipy = "^1.11.1"
python-pptx = "^1.0.2"
nltk = "^3.9.1"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pyright = "^1.1.303"
pytest = "^7.3.1"
ruff = "^0.0.261"
pytest-asyncio = "^0.21.1"

[[tool.poetry.source]]
name = "PyPI"
priority = "supplemental"

[tool.black]
skip-magic-trailing-comma = true
target-version = ["py310"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.poetry-dynamic-versioning]
enable = true
bump = true
vcs = "git"
style = "pep440"
# We have this custom format string to avoid putting the Git hash as the local version segment,
# as Azure Artifacts doesn't allow that.
# https://developercommunity.visualstudio.com/t/local-version-segments-for-python-package-feeds/892057
format-jinja = """
    {%- if distance == 0 -%}
        {{ serialize_pep440(base, stage, revision) }}
    {%- else -%}
        {{ serialize_pep440(base, stage, revision, dev=distance) }}
    {%- endif -%}
"""

[tool.pyright]
include = [
  "src",
  "tests",
]
reportUnnecessaryCast = "error"
reportUnnecessaryTypeIgnoreComment = "error"

[tool.ruff]
# See hhttps://beta.ruff.rs/docs/rules/ for a list of rules.
# This list is kept in the same order as the documentation.
select = [
  "E",
  "F",
  "W",
  "I",
  "UP",
  "B",
  "C4",
  "RUF",
]
ignore = [
  # Do not perform function call in argument defaults	
  "B008",
  # Line too long
  "E501",
]
target-version = "py310"
src = [
  "src",
  "tests",
]

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"
